# JQR_motion_agent_true

./: .env.example  .gitignore  FOUR_WAYPOINT_CONTROL_README.md  OBSTACLE_AVOIDANCE_IMPLEMENTATION.md  README.en.md  README.md  README_4DOF_TEST.md  TEST_SUMMARY_4DOF.md  VERIFICATION_SUMMARY.md  WEBSOCKET_CHANGES.md  WEBSOCKET_CONTROL_README.md  agent.service  agent_architecture_guide.html  camera_rgb_service.py  combine_motor_protocol.json  config.py  four_combine_motor_protocol.json  history.db  local_model_bridge.py  mock_four_motor_node.py  mock_four_waypoint_node.py  mock_motor_node.py  obstacle_avoidance_protocol.json  protocol_parser.py  quick_test_4dof.sh  requirements_websocket.txt  rk.rules  run_e2e_test.sh  smart_robot_agent.py  start_agent.sh  start_websocket_test.sh  test.py  test_4dof_head_control.py  test_agent_client.py  test_agent_stop_client.py  test_auto_run.py  test_e2e_report.json  test_e2e_scenarios.py  test_four_combine_motor.py  test_four_waypoint_control.py  (+14 more)
.claude/: settings.local.json
.understand-anything/: .understandignore  config.json  fingerprints.json  knowledge-graph.json  meta.json  (+1 more)
jqr_ros_msgs/: CMakeLists.txt  package.xml
jqr_ros_msgs/msg/: BatteryLevel.msg
jqr_ros_msgs/srv/: FaceDelete.srv  FaceRecognition.srv  FaceRegistration.srv  LaserPointer.srv  LaserPointerState.srv  MedicineBoxState.srv  MedicineBoxSwitch.srv  MoveMode.srv  RealSenseDepthImage.srv  RealSenseRGBImage.srv  RgbLightStrip.srv  RgbLightStripState.srv  RobotRise.srv  RobotRiseState.srv  RobotTilt.srv  RobotTiltState.srv  ScreenTilt.srv  ScreenTiltState.srv
(+21 files in other folders)
